Support Windows high-contrast mode. Fix #716

--- a/static/katex.less
+++ b/static/katex.less
@@ -22,6 +22,9 @@
     // Protect elements inside .katex from inheriting text-indent.
     text-indent: 0;
 
+    // Prevent background resetting in Windows's high-contrast mode.
+    -ms-high-contrast-adjust: none !important;
+
     .katex-html {
         // Making .katex inline-block allows line breaks before and after,
         // which is undesireable ("to $x$,"). Instead, adjust the .katex-html
